css/style.css
/* 
<!--BootStrap Portfolio CSS--> */

.container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
  }

  .header-wrapper{
    border-bottom: 1px solid #777777;
    scroll-margin-bottom: 0px;
  }

  #header{
    display: flex;
    align-content: space-between;
  }

  #name{
    display: flex;
    justify-content: center;
    background: #4aaaa5;  
    width: 200px;
    color: #ffffff;
 }

  #aboutme-wrapper{
    background: #ffffff;
  }
  
  .content{
    background: url(../assets/images/regal.png);
    padding-bottom: 100px;
    padding-top: 30px;
    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
  }

  .navbarNav {
      display: flex;
      align-content: space-between;
  }

  .form-group{
    width: 960px;
  }

  button[type=submit] {
    background-color: #4aaaa5;
    color: #ffffff;
    padding: 10px 20px;
    border: none;
    cursor: pointer;
  }
 

  .footer{
    /* background: #666666; */
    /* border-top: 2px solid #4aaaa5; */
    /* padding-top: 10px;
    padding-bottom:5px ; */
    color: #ffffff;
    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    border-top: 8px solid #4aaaa5;
    /* margin-top: -40px; */
  }

    
  .grid{
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    flex-direction: row;
    padding-left: 20px;
    /* width: 500px;  */
    /* border-color: lime; */
    }
  

  /* #grid .row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
  } */
  
  /* Create four equal columns that sits next to each other */
  /* #grid .column {
    flex: 50%;
    max-width: 50%;
    padding: 0 4px;
  } */
  
  .grid img {
    margin-top: 8px;
    /* vertical-align: middle; */
    /* width: 100%; */
    max-width: 200px;
    max-height: 150px;
  }
  

  h1,h2,h3,h4,h5,h6{
    font-family: 'Georgia', Times, 'Times New Roman', serif;
  }
  
  a:link {
    color:#777777;
    text-decoration: none;
  }
  
  /* visited link */
  a:visited {
    color:#777777;
    text-decoration: none;
  }
  
  /* mouse over link */
  a:hover {
    color:  #4aaaa5;
    text-decoration: none;
  }
  
  /* selected link */
  a:active {
    color:#777777;
    text-decoration: none;
  }
  
  p{
    color:#777777;
  }

  .with-margin {
    margin-bottom: 20px;
  }

  @media screen and (min-width: 400px) {
    /* The body's bg color will be #333 */
    body {
      background-color: #333;
    }
 

